subida de material y listado

--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -402,6 +402,12 @@
     <Compile Include="Tarjetas\tarjCursoxNivel.Designer.cs">
       <DependentUpon>tarjCursoxNivel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Tarjetas\tarjMaterial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tarjetas\tarjMaterial.Designer.cs">
+      <DependentUpon>tarjMaterial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tarjetas\tarjTipoMaterial.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -630,6 +636,9 @@
     <EmbeddedResource Include="Tarjetas\tarjCursoxNivel.resx">
       <DependentUpon>tarjCursoxNivel.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Tarjetas\tarjMaterial.resx">
+      <DependentUpon>tarjMaterial.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Tarjetas\tarjMensaje.resx">
       <DependentUpon>tarjMensaje.cs</DependentUpon>
     </EmbeddedResource>
@@ -648,8 +657,8 @@
     <EmbeddedResource Include="Tarjetas\tarjUsuario.resx">
       <DependentUpon>tarjUsuario.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="Connected Services\CursosWS\CursosWS.wsdl" />
-    <None Include="Connected Services\CursosWS\CursosWS.xsd">
+    <None Include="Connected Services\CursosWS\CursosWS1.wsdl" />
+    <None Include="Connected Services\CursosWS\CursosWS1.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.curso.datasource">
@@ -703,8 +712,8 @@
     <None Include="Connected Services\NotificacionesWS\LP2Soft.NotificacionesWS.ultimoMensaje1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\NotificacionesWS\NotificacionesWS.wsdl" />
-    <None Include="Connected Services\NotificacionesWS\NotificacionesWS.xsd">
+    <None Include="Connected Services\NotificacionesWS\NotificacionesWS1.wsdl" />
+    <None Include="Connected Services\NotificacionesWS\NotificacionesWS1.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\PublicacionesWS\LP2Soft.PublicacionesWS.agendarEventoResponse.datasource">
@@ -767,6 +776,12 @@
     <None Include="Connected Services\PublicacionesWS\LP2Soft.PublicacionesWS.listarXcursoResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\PublicacionesWS\LP2Soft.PublicacionesWS.listar_material_tipo_indiceResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\PublicacionesWS\LP2Soft.PublicacionesWS.material.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\PublicacionesWS\LP2Soft.PublicacionesWS.modificarEventoResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -776,8 +791,8 @@
     <None Include="Connected Services\PublicacionesWS\LP2Soft.PublicacionesWS.postGenerico.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\PublicacionesWS\PublicacionesWS.wsdl" />
-    <None Include="Connected Services\PublicacionesWS\PublicacionesWS.xsd">
+    <None Include="Connected Services\PublicacionesWS\PublicacionesWS1.wsdl" />
+    <None Include="Connected Services\PublicacionesWS\PublicacionesWS1.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.agregarAmigoResponse.datasource">
@@ -828,8 +843,8 @@
     <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.usuario.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\UsuarioWS\UsuariosWS.wsdl" />
-    <None Include="Connected Services\UsuarioWS\UsuariosWS.xsd">
+    <None Include="Connected Services\UsuarioWS\UsuariosWS1.wsdl" />
+    <None Include="Connected Services\UsuarioWS\UsuariosWS1.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Properties\Settings.settings">
