Renzo reseniar, listar y eliminar resenia

--- a/LP2Soft/App.config
+++ b/LP2Soft/App.config
@@ -6,14 +6,10 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="UsuariosWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="PublicacionesWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="NotificacionesWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
-                <binding name="CursosWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
+                <binding name="CursosWSPortBinding" />
+                <binding name="NotificacionesWSPortBinding" />
+                <binding name="PublicacionesWSPortBinding" />
+                <binding name="UsuariosWSPortBinding" />
             </basicHttpBinding>
         </bindings>
         <client>
