--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -675,13 +675,16 @@
     <EmbeddedResource Include="Tarjetas\tarjUsuario.resx">
       <DependentUpon>tarjUsuario.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="Connected Services\CursosWS\CursosWS.wsdl" />
-    <None Include="Connected Services\CursosWS\CursosWS.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Connected Services\CursosWS\CursosWS1.wsdl" />
     <None Include="Connected Services\CursosWS\CursosWS1.xsd">
       <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\CursosWS\CursosWS11.wsdl" />
+    <None Include="Connected Services\CursosWS\CursosWS11.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.actualizarCursoxUsuarioResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.curso.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -746,12 +749,12 @@
     <None Include="Connected Services\NotificacionesWS\LP2Soft.NotificacionesWS.ultimoMensaje1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\NotificacionesWS\NotificacionesWS.wsdl" />
-    <None Include="Connected Services\NotificacionesWS\NotificacionesWS.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Connected Services\NotificacionesWS\NotificacionesWS1.wsdl" />
     <None Include="Connected Services\NotificacionesWS\NotificacionesWS1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\NotificacionesWS\NotificacionesWS11.wsdl" />
+    <None Include="Connected Services\NotificacionesWS\NotificacionesWS11.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\PublicacionesWS\LP2Soft.PublicacionesWS.agendarEventoResponse.datasource">
@@ -838,12 +841,12 @@
     <None Include="Connected Services\PublicacionesWS\LP2Soft.PublicacionesWS.postGenerico.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\PublicacionesWS\PublicacionesWS.wsdl" />
-    <None Include="Connected Services\PublicacionesWS\PublicacionesWS.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Connected Services\PublicacionesWS\PublicacionesWS1.wsdl" />
     <None Include="Connected Services\PublicacionesWS\PublicacionesWS1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\PublicacionesWS\PublicacionesWS11.wsdl" />
+    <None Include="Connected Services\PublicacionesWS\PublicacionesWS11.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.agregarAmigoResponse.datasource">
@@ -903,12 +906,12 @@
     <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.usuario.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\UsuarioWS\UsuariosWS.wsdl" />
-    <None Include="Connected Services\UsuarioWS\UsuariosWS.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Connected Services\UsuarioWS\UsuariosWS1.wsdl" />
     <None Include="Connected Services\UsuarioWS\UsuariosWS1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\UsuarioWS\UsuariosWS11.wsdl" />
+    <None Include="Connected Services\UsuarioWS\UsuariosWS11.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Properties\Settings.settings">
