Enviar correo a asesor y recuperar contraseña

--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -280,6 +280,12 @@
     <Compile Include="Home\frmPrincipal.Designer.cs">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Home\frmRecuperarContrasenia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Home\frmRecuperarContrasenia.Designer.cs">
+      <DependentUpon>frmRecuperarContrasenia.cs</DependentUpon>
+    </Compile>
     <Compile Include="Home\frmSignIn.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -345,6 +351,12 @@
     </Compile>
     <Compile Include="Perfil\frmPerfil_EditarInfo.Designer.cs">
       <DependentUpon>frmPerfil_EditarInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Perfil\frmPerfil_EnviarCorreo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Perfil\frmPerfil_EnviarCorreo.Designer.cs">
+      <DependentUpon>frmPerfil_EnviarCorreo.cs</DependentUpon>
     </Compile>
     <Compile Include="Perfil\frmPerfil_Informacion.cs">
       <SubType>Form</SubType>
@@ -577,6 +589,9 @@
     <EmbeddedResource Include="Home\frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Home\frmRecuperarContrasenia.resx">
+      <DependentUpon>frmRecuperarContrasenia.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Home\frmSignIn.resx">
       <DependentUpon>frmSignIn.cs</DependentUpon>
     </EmbeddedResource>
@@ -609,6 +624,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Perfil\frmPerfil_EditarInfo.resx">
       <DependentUpon>frmPerfil_EditarInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Perfil\frmPerfil_EnviarCorreo.resx">
+      <DependentUpon>frmPerfil_EnviarCorreo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Perfil\frmPerfil_Informacion.resx">
       <DependentUpon>frmPerfil_Informacion.cs</DependentUpon>
@@ -675,12 +693,12 @@
     <EmbeddedResource Include="Tarjetas\tarjUsuario.resx">
       <DependentUpon>tarjUsuario.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="Connected Services\CursosWS\CursosWS.wsdl" />
-    <None Include="Connected Services\CursosWS\CursosWS.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Connected Services\CursosWS\CursosWS1.wsdl" />
     <None Include="Connected Services\CursosWS\CursosWS1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\CursosWS\CursosWS11.wsdl" />
+    <None Include="Connected Services\CursosWS\CursosWS11.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\CursosWS\LP2Soft.CursosWS.curso.datasource">
@@ -746,12 +764,12 @@
     <None Include="Connected Services\NotificacionesWS\LP2Soft.NotificacionesWS.ultimoMensaje1.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\NotificacionesWS\NotificacionesWS.wsdl" />
-    <None Include="Connected Services\NotificacionesWS\NotificacionesWS.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Connected Services\NotificacionesWS\NotificacionesWS1.wsdl" />
     <None Include="Connected Services\NotificacionesWS\NotificacionesWS1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\NotificacionesWS\NotificacionesWS11.wsdl" />
+    <None Include="Connected Services\NotificacionesWS\NotificacionesWS11.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\PublicacionesWS\LP2Soft.PublicacionesWS.agendarEventoResponse.datasource">
@@ -838,12 +856,12 @@
     <None Include="Connected Services\PublicacionesWS\LP2Soft.PublicacionesWS.postGenerico.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\PublicacionesWS\PublicacionesWS.wsdl" />
-    <None Include="Connected Services\PublicacionesWS\PublicacionesWS.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Connected Services\PublicacionesWS\PublicacionesWS1.wsdl" />
     <None Include="Connected Services\PublicacionesWS\PublicacionesWS1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\PublicacionesWS\PublicacionesWS11.wsdl" />
+    <None Include="Connected Services\PublicacionesWS\PublicacionesWS11.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.agregarAmigoResponse.datasource">
@@ -897,18 +915,21 @@
     <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.mostrarUsuarioResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.recuperarContraseniaResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.resenia.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\UsuarioWS\LP2Soft.UsuarioWS.usuario.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\UsuarioWS\UsuariosWS.wsdl" />
-    <None Include="Connected Services\UsuarioWS\UsuariosWS.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Connected Services\UsuarioWS\UsuariosWS1.wsdl" />
     <None Include="Connected Services\UsuarioWS\UsuariosWS1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\UsuarioWS\UsuariosWS11.wsdl" />
+    <None Include="Connected Services\UsuarioWS\UsuariosWS11.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Properties\Settings.settings">
