parte de listar y filtar publicaiones

--- a/LP2Soft/App.config
+++ b/LP2Soft/App.config
@@ -26,6 +26,9 @@
             <endpoint address="http://localhost:8080/LP2Soft_WebService/PublicacionesWS"
                 binding="basicHttpBinding" bindingConfiguration="PublicacionesWSPortBinding"
                 contract="PublicacionesWS.PublicacionesWS" name="PublicacionesWSPort" />
+            <endpoint address="http://localhost:8080/LP2Soft_WebService/CursosWS"
+                binding="basicHttpBinding" bindingConfiguration="CursosWSPortBinding"
+                contract="CursosWS.CursosWS" name="CursosWSPort" />
         </client>
     </system.serviceModel>
 </configuration>
