Se pueden ver las notificaciones de eventos

--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -764,6 +764,9 @@
     <None Include="Connected Services\NotificacionesWS\LP2Soft.NotificacionesWS.enviarMensajeResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\NotificacionesWS\LP2Soft.NotificacionesWS.existeEventoAgendadoResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\NotificacionesWS\LP2Soft.NotificacionesWS.insertarNotificacionResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
