--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -705,6 +705,9 @@
     <EmbeddedResource Include="Tarjetas\tarjTipoMaterial.resx">
       <DependentUpon>tarjTipoMaterial.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Tarjetas\tarjTipoMaterialIndice.resx">
+      <DependentUpon>tarjTipoMaterialIndice.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Tarjetas\tarjUltimoMensaje.resx">
       <DependentUpon>tarjUltimoMensaje.cs</DependentUpon>
     </EmbeddedResource>
