Encriptacion de contrasenias

--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -250,6 +250,7 @@
     <Compile Include="Eventos\frmTendenciaMaterial.Designer.cs">
       <DependentUpon>frmTendenciaMaterial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Home\Encriptador.cs" />
     <Compile Include="Home\frmBusquedaUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
