--- a/LP2Soft/LP2Soft.csproj
+++ b/LP2Soft/LP2Soft.csproj
@@ -323,6 +323,12 @@
     <Compile Include="Notificaciones\frmNotificaciones.Designer.cs">
       <DependentUpon>frmNotificaciones.cs</DependentUpon>
     </Compile>
+    <Compile Include="Perfil\frmCambiarContrasenia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Perfil\frmCambiarContrasenia.Designer.cs">
+      <DependentUpon>frmCambiarContrasenia.cs</DependentUpon>
+    </Compile>
     <Compile Include="Perfil\frmCrearResenia.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -628,6 +634,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Notificaciones\frmNotificaciones.resx">
       <DependentUpon>frmNotificaciones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Perfil\frmCambiarContrasenia.resx">
+      <DependentUpon>frmCambiarContrasenia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Perfil\frmCrearResenia.resx">
       <DependentUpon>frmCrearResenia.cs</DependentUpon>
